packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-006.ttrp
// expect: TTRP-PD-006
container c target polars """pandas
x.set_index(id)
"""
